redsl_parser.go
// Code generated from ReDSLParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package redsl_parser // ReDSLParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type ReDSLParser struct {
	*antlr.BaseParser
}

var ReDSLParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func redslparserParserInit() {
	staticData := &ReDSLParserParserStaticData
	staticData.LiteralNames = []string{
		"", "'file'", "", "", "'package'", "", "", "", "'document'", "'version-info'",
		"'glossary'", "'local'", "'global'", "'['", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "']'", "", "'='", "", "",
		"','", "", "", "", "", "';'", "", "", "", "", "", "", "", "'('", "')'",
	}
	staticData.SymbolicNames = []string{
		"", "FILE_KEYWORD", "BLOCK_START", "BLOCK_END", "PACKAGE_KEYWORD", "ID_STR",
		"WS", "REQ_DEF", "DOCUMENT_KEYWORD", "VERSION_INFO_KEYWORD", "GLOSSARY_KEYWORD",
		"LOCAL_KEYWORD", "GLOBAL_KEYWORD", "PARAM_START", "TEXT_START", "DEDUCT_START",
		"REQ_DEF_WS", "TEXT_CLOSE", "TEXT_COMMENT", "TEXT_WS", "TEXT_LINE_BREAK",
		"TEXT_NEXT_PARA", "TEXT_EXAMPLE_MARKER", "TEXT_RATIO_MARKER", "TEXT_REF_MARKER",
		"TEXT_RE_ID_REF", "TEXT_URI", "TEXT_TERM_REF", "TEXT_START_MATH", "TEXT_ESC_SEQ",
		"TEXT_CONTENT", "PARAM_CLOSE", "PARAM_ID", "PARAM_EQUALS", "PARAM_STRING",
		"PARAM_ID_LIST_START", "PARAM_ID_LIST_SEP", "PARAM_ID_LIST_END", "PARAM_BOOL",
		"PARAM_NUMBER", "PARAM_WS", "DEDUCT_CLOSE", "DEDUCT_COMMENT", "DEDUCT_RE_ID_REF",
		"DEDUCT_AND", "DEDUCT_OR", "DEDUCT_NOT", "DEDUCT_TRUE", "DEDUCT_FALSE",
		"DEDUCT_LPAREN", "DEDUCT_RPAREN", "DEDUCT_WS", "MATH_CLOSE", "MATH_ESC_SEQ",
		"MATH_CONTENT",
	}
	staticData.RuleNames = []string{
		"parse", "fileDecl", "packageDecl", "requirementDecl", "requirementDeduction",
		"logicalExpression", "logicalAtom", "logicalUnaryExpression", "logicalBinaryExpression",
		"exampleDecl", "rationaleDecl", "referenceDecl", "runningText", "parameterBlock",
		"paramDecl", "stringParamDecl", "idParamDecl", "numericParamDecl", "boolParamDecl",
		"idListParamDecl", "mathModeExpression", "documentDecl", "packageRef",
		"fileRef",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// ReDSLParserInit initializes any static state used to implement ReDSLParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewReDSLParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func ReDSLParserInit() {
	staticData := &ReDSLParserParserStaticData
	staticData.once.Do(redslparserParserInit)
}

// NewReDSLParser produces a new parser instance for the optional input antlr.TokenStream.
func NewReDSLParser(input antlr.TokenStream) *ReDSLParser {
	ReDSLParserInit()
	this := new(ReDSLParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &ReDSLParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "ReDSLParser.g4"

	return this
}

// ReDSLParser tokens.
const (
	ReDSLParserEOF                  = antlr.TokenEOF
	ReDSLParserFILE_KEYWORD         = 1
	ReDSLParserBLOCK_START          = 2
	ReDSLParserBLOCK_END            = 3
	ReDSLParserPACKAGE_KEYWORD      = 4
	ReDSLParserID_STR               = 5
	ReDSLParserWS                   = 6
	ReDSLParserREQ_DEF              = 7
	ReDSLParserDOCUMENT_KEYWORD     = 8
	ReDSLParserVERSION_INFO_KEYWORD = 9
	ReDSLParserGLOSSARY_KEYWORD     = 10
	ReDSLParserLOCAL_KEYWORD        = 11
	ReDSLParserGLOBAL_KEYWORD       = 12
	ReDSLParserPARAM_START          = 13
	ReDSLParserTEXT_START           = 14
	ReDSLParserDEDUCT_START         = 15
	ReDSLParserREQ_DEF_WS           = 16
	ReDSLParserTEXT_CLOSE           = 17
	ReDSLParserTEXT_COMMENT         = 18
	ReDSLParserTEXT_WS              = 19
	ReDSLParserTEXT_LINE_BREAK      = 20
	ReDSLParserTEXT_NEXT_PARA       = 21
	ReDSLParserTEXT_EXAMPLE_MARKER  = 22
	ReDSLParserTEXT_RATIO_MARKER    = 23
	ReDSLParserTEXT_REF_MARKER      = 24
	ReDSLParserTEXT_RE_ID_REF       = 25
	ReDSLParserTEXT_URI             = 26
	ReDSLParserTEXT_TERM_REF        = 27
	ReDSLParserTEXT_START_MATH      = 28
	ReDSLParserTEXT_ESC_SEQ         = 29
	ReDSLParserTEXT_CONTENT         = 30
	ReDSLParserPARAM_CLOSE          = 31
	ReDSLParserPARAM_ID             = 32
	ReDSLParserPARAM_EQUALS         = 33
	ReDSLParserPARAM_STRING         = 34
	ReDSLParserPARAM_ID_LIST_START  = 35
	ReDSLParserPARAM_ID_LIST_SEP    = 36
	ReDSLParserPARAM_ID_LIST_END    = 37
	ReDSLParserPARAM_BOOL           = 38
	ReDSLParserPARAM_NUMBER         = 39
	ReDSLParserPARAM_WS             = 40
	ReDSLParserDEDUCT_CLOSE         = 41
	ReDSLParserDEDUCT_COMMENT       = 42
	ReDSLParserDEDUCT_RE_ID_REF     = 43
	ReDSLParserDEDUCT_AND           = 44
	ReDSLParserDEDUCT_OR            = 45
	ReDSLParserDEDUCT_NOT           = 46
	ReDSLParserDEDUCT_TRUE          = 47
	ReDSLParserDEDUCT_FALSE         = 48
	ReDSLParserDEDUCT_LPAREN        = 49
	ReDSLParserDEDUCT_RPAREN        = 50
	ReDSLParserDEDUCT_WS            = 51
	ReDSLParserMATH_CLOSE           = 52
	ReDSLParserMATH_ESC_SEQ         = 53
	ReDSLParserMATH_CONTENT         = 54
)

// ReDSLParser rules.
const (
	ReDSLParserRULE_parse                   = 0
	ReDSLParserRULE_fileDecl                = 1
	ReDSLParserRULE_packageDecl             = 2
	ReDSLParserRULE_requirementDecl         = 3
	ReDSLParserRULE_requirementDeduction    = 4
	ReDSLParserRULE_logicalExpression       = 5
	ReDSLParserRULE_logicalAtom             = 6
	ReDSLParserRULE_logicalUnaryExpression  = 7
	ReDSLParserRULE_logicalBinaryExpression = 8
	ReDSLParserRULE_exampleDecl             = 9
	ReDSLParserRULE_rationaleDecl           = 10
	ReDSLParserRULE_referenceDecl           = 11
	ReDSLParserRULE_runningText             = 12
	ReDSLParserRULE_parameterBlock          = 13
	ReDSLParserRULE_paramDecl               = 14
	ReDSLParserRULE_stringParamDecl         = 15
	ReDSLParserRULE_idParamDecl             = 16
	ReDSLParserRULE_numericParamDecl        = 17
	ReDSLParserRULE_boolParamDecl           = 18
	ReDSLParserRULE_idListParamDecl         = 19
	ReDSLParserRULE_mathModeExpression      = 20
	ReDSLParserRULE_documentDecl            = 21
	ReDSLParserRULE_packageRef              = 22
	ReDSLParserRULE_fileRef                 = 23
)

// IParseContext is an interface to support dynamic dispatch.
type IParseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllFileDecl() []IFileDeclContext
	FileDecl(i int) IFileDeclContext
	AllPackageDecl() []IPackageDeclContext
	PackageDecl(i int) IPackageDeclContext
	AllRequirementDecl() []IRequirementDeclContext
	RequirementDecl(i int) IRequirementDeclContext

	// IsParseContext differentiates from other interfaces.
	IsParseContext()
}

type ParseContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParseContext() *ParseContext {
	var p = new(ParseContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ReDSLParserRULE_parse
	return p
}

func InitEmptyParseContext(p *ParseContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ReDSLParserRULE_parse
}

func (*ParseContext) IsParseContext() {}

func NewParseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParseContext {
	var p = new(ParseContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ReDSLParserRULE_parse

	return p
}

func (s *ParseContext) GetParser() antlr.Parser { return s.parser }

func (s *ParseContext) AllFileDecl() []IFileDeclContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFileDeclContext); ok {
			len++
		}
	}

	tst := make([]IFileDeclContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFileDeclContext); ok {
			tst[i] = t.(IFileDeclContext)
			i++
		}
	}

	return tst
}

func (s *ParseContext) FileDecl(i int) IFileDeclContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFileDeclContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFileDeclContext)
}

func (s *ParseContext) AllPackageDecl() []IPackageDeclContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IPackageDeclContext); ok {
			len++
		}
	}

	tst := make([]IPackageDeclContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IPackageDeclContext); ok {
			tst[i] = t.(IPackageDeclContext)
			i++
		}
	}

	return tst
}

func (s *ParseContext) PackageDecl(i int) IPackageDeclContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPackageDeclContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPackageDeclContext)
}

func (s *ParseContext) AllRequirementDecl() []IRequirementDeclContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRequirementDeclContext); ok {
			len++
		}
	}

	tst := make([]IRequirementDeclContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRequirementDeclContext); ok {
			tst[i] = t.(IRequirementDeclContext)
			i++
		}
	}

	return tst
}

func (s *ParseContext) RequirementDecl(i int) IRequirementDeclContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRequirementDeclContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRequirementDeclContext)
}

func (s *ParseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ReDSLParserListener); ok {
		listenerT.EnterParse(s)
	}
}

func (s *ParseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ReDSLParserListener); ok {
		listenerT.ExitParse(s)
	}
}

func (p *ReDSLParser) Parse() (localctx IParseContext) {
	localctx = NewParseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ReDSLParserRULE_parse)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(59)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	switch p.GetTokenStream().LA(1) {
	case ReDSLParserFILE_KEYWORD:
		p.SetState(49)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		for ok := true; ok; ok = _la == ReDSLParserFILE_KEYWORD {
			{
				p.SetState(48)
				p.FileDecl()
			}

			p.SetState(51)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_la = p.GetTokenStream().LA(1)
		}

	case ReDSLParserPACKAGE_KEYWORD, ReDSLParserREQ_DEF:
		p.SetState(55)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		for ok := true; ok; ok = _la == ReDSLParserPACKAGE_KEYWORD || _la == ReDSLParserREQ_DEF {
			p.SetState(55)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}

			switch p.GetTokenStream().LA(1) {
			case ReDSLParserPACKAGE_KEYWORD:
				{
					p.SetState(53)
					p.PackageDecl()
				}

			case ReDSLParserREQ_DEF:
				{
					p.SetState(54)
					p.RequirementDecl()
				}

			default:
				p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
				goto errorExit
			}

			p.SetState(57)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_la = p.GetTokenStream().LA(1)
		}

	case ReDSLParserEOF:

	default:
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFileDeclContext is an interface to support dynamic dispatch.
type IFileDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	FILE_KEYWORD() antlr.TerminalNode
	ID_STR() antlr.TerminalNode
	BLOCK_START() antlr.TerminalNode
	BLOCK_END() antlr.TerminalNode
	AllPackageDecl() []IPackageDeclContext
	PackageDecl(i int) IPackageDeclContext
	AllRequirementDecl() []IRequirementDeclContext
	RequirementDecl(i int) IRequirementDeclContext
	AllRequirementDeduction() []IRequirementDeductionContext
	RequirementDeduction(i int) IRequirementDeductionContext
	AllDocumentDecl() []IDocumentDeclContext
	DocumentDecl(i int) IDocumentDeclContext

	// IsFileDeclContext differentiates from other interfaces.
	IsFileDeclContext()
}

type FileDeclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFileDeclContext() *FileDeclContext {
	var p = new(FileDeclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ReDSLParserRULE_fileDecl
	return p
}

func InitEmptyFileDeclContext(p *FileDeclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ReDSLParserRULE_fileDecl
}

func (*FileDeclContext) IsFileDeclContext() {}

func NewFileDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FileDeclContext {
	var p = new(FileDeclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ReDSLParserRULE_fileDecl

	return p
}

func (s *FileDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *FileDeclContext) FILE_KEYWORD() antlr.TerminalNode {
	return s.GetToken(ReDSLParserFILE_KEYWORD, 0)
}

func (s *FileDeclContext) ID_STR() antlr.TerminalNode {
	return s.GetToken(ReDSLParserID_STR, 0)
}

func (s *FileDeclContext) BLOCK_START() antlr.TerminalNode {
	return s.GetToken(ReDSLParserBLOCK_START, 0)
}

func (s *FileDeclContext) BLOCK_END() antlr.TerminalNode {
	return s.GetToken(ReDSLParserBLOCK_END, 0)
}

func (s *FileDeclContext) AllPackageDecl() []IPackageDeclContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IPackageDeclContext); ok {
			len++
		}
	}

	tst := make([]IPackageDeclContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IPackageDeclContext); ok {
			tst[i] = t.(IPackageDeclContext)
			i++
		}
	}

	return tst
}

func (s *FileDeclContext) PackageDecl(i int) IPackageDeclContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPackageDeclContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPackageDeclContext)
}

func (s *FileDeclContext) AllRequirementDecl() []IRequirementDeclContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRequirementDeclContext); ok {
			len++
		}
	}

	tst := make([]IRequirementDeclContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRequirementDeclContext); ok {
			tst[i] = t.(IRequirementDeclContext)
			i++
		}
	}

	return tst
}

func (s *FileDeclContext) RequirementDecl(i int) IRequirementDeclContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRequirementDeclContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRequirementDeclContext)
}

func (s *FileDeclContext) AllRequirementDeduction() []IRequirementDeductionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRequirementDeductionContext); ok {
			len++
		}
	}

	tst := make([]IRequirementDeductionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRequirementDeductionContext); ok {
			tst[i] = t.(IRequirementDeductionContext)
			i++
		}
	}

	return tst
}

func (s *FileDeclContext) RequirementDeduction(i int) IRequirementDeductionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRequirementDeductionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRequirementDeductionContext)
}

func (s *FileDeclContext) AllDocumentDecl() []IDocumentDeclContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDocumentDeclContext); ok {
			len++
		}
	}

	tst := make([]IDocumentDeclContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDocumentDeclContext); ok {
			tst[i] = t.(IDocumentDeclContext)
			i++
		}
	}

	return tst
}

func (s *FileDeclContext) DocumentDecl(i int) IDocumentDeclContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDocumentDeclContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDocumentDeclContext)
}

func (s *FileDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FileDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FileDeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ReDSLParserListener); ok {
		listenerT.EnterFileDecl(s)
	}
}

func (s *FileDeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ReDSLParserListener); ok {
		listenerT.ExitFileDecl(s)
	}
}

func (p *ReDSLParser) FileDecl() (localctx IFileDeclContext) {
	localctx = NewFileDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ReDSLParserRULE_fileDecl)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(61)
		p.Match(ReDSLParserFILE_KEYWORD)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(62)
		p.Match(ReDSLParserID_STR)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(63)
		p.Match(ReDSLParserBLOCK_START)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(70)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&400) != 0 {
		p.SetState(68)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 4, p.GetParserRuleContext()) {
		case 1:
			{
				p.SetState(64)
				p.PackageDecl()
			}

		case 2:
			{
				p.SetState(65)
				p.RequirementDecl()
			}

		case 3:
			{
				p.SetState(66)
				p.RequirementDeduction()
			}

		case 4:
			{
				p.SetState(67)
				p.DocumentDecl()
			}

		case antlr.ATNInvalidAltNumber:
			goto errorExit
		}

		p.SetState(72)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(73)
		p.Match(ReDSLParserBLOCK_END)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IPackageDeclContext is an interface to support dynamic dispatch.
type IPackageDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	PACKAGE_KEYWORD() antlr.TerminalNode
	ID_STR() antlr.TerminalNode

	// IsPackageDeclContext differentiates from other interfaces.
	IsPackageDeclContext()
}

type PackageDeclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPackageDeclContext() *PackageDeclContext {
	var p = new(PackageDeclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ReDSLParserRULE_packageDecl
	return p
}

func InitEmptyPackageDeclContext(p *PackageDeclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ReDSLParserRULE_packageDecl
}

func (*PackageDeclContext) IsPackageDeclContext() {}

func NewPackageDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PackageDeclContext {
	var p = new(PackageDeclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ReDSLParserRULE_packageDecl

	return p
}

func (s *PackageDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *PackageDeclContext) PACKAGE_KEYWORD() antlr.TerminalNode {
	return s.GetToken(ReDSLParserPACKAGE_KEYWORD, 0)
}

func (s *PackageDeclContext) ID_STR() antlr.TerminalNode {
	return s.GetToken(ReDSLParserID_STR, 0)
}

func (s *PackageDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PackageDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PackageDeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ReDSLParserListener); ok {
		listenerT.EnterPackageDecl(s)
	}
}

func (s *PackageDeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ReDSLParserListener); ok {
		listenerT.ExitPackageDecl(s)
	}
}

func (p *ReDSLParser) PackageDecl() (localctx IPackageDeclContext) {
	localctx = NewPackageDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, ReDSLParserRULE_packageDecl)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(75)
		p.Match(ReDSLParserPACKAGE_KEYWORD)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(76)
		p.Match(ReDSLParserID_STR)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IRequirementDeclContext is an interface to support dynamic dispatch.
type IRequirementDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	REQ_DEF() antlr.TerminalNode
	TEXT_START() antlr.TerminalNode
	TEXT_CLOSE() antlr.TerminalNode
	ParameterBlock() IParameterBlockContext
	AllTEXT_NEXT_PARA() []antlr.TerminalNode
	TEXT_NEXT_PARA(i int) antlr.TerminalNode
	AllRunningText() []IRunningTextContext
	RunningText(i int) IRunningTextContext
	AllExampleDecl() []IExampleDeclContext
	ExampleDecl(i int) IExampleDeclContext
	AllRationaleDecl() []IRationaleDeclContext
	RationaleDecl(i int) IRationaleDeclContext
	AllReferenceDecl() []IReferenceDeclContext
	ReferenceDecl(i int) IReferenceDeclContext

	// IsRequirementDeclContext differentiates from other interfaces.
	IsRequirementDeclContext()
}

type RequirementDeclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRequirementDeclContext() *RequirementDeclContext {
	var p = new(RequirementDeclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ReDSLParserRULE_requirementDecl
	return p
}

func InitEmptyRequirementDeclContext(p *RequirementDeclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ReDSLParserRULE_requirementDecl
}

func (*RequirementDeclContext) IsRequirementDeclContext() {}

func NewRequirementDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RequirementDeclContext {
	var p = new(RequirementDeclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ReDSLParserRULE_requirementDecl

	return p
}
